--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities; */
 
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap");
+
+* {
+  font-family: "Ubuntu Sans Mono", monospace;
+}
